SERVER-20740: Check exceptions in SASL callbacks

GitOrigin-RevId: fcdf816d32f1c4a218a8c7e39859c689dc68be5f